# PCL-Objekerkennung-und-Tracking

./: .gitignore
src/: anforderungen.tex  ba.tex  bewertung.tex  genutzte_module_und_algorithmen.tex  literatur.bib  literatur.tex  run_aufzeichnung.sh
src/ouster_cpp/: CMakeLists.txt  package.xml
src/ouster_cpp/include/ouster_cpp/: hungarian.hpp
src/ouster_cpp/launch/: benchmark.launch.py  ouster_pipeline.launch.py
src/ouster_cpp/scripts/: bbox-y-vs-bench.sh  ct-vs-bench.sh  delta-vs-bench.sh  dt-vs-bench.sh  frame_loss_probe.py  ids_probe.py  latency_probe.py  resource_probe.py  run_benchmark_grid.sh
src/ouster_cpp/src/: cluster_extraction_node.cpp  crop_box_node.cpp  ransac_ground_node.cpp  tracking_node.cpp  voxel_filter_node.cpp
src/ouster_slam/: CMakeLists.txt  package.xml
src/ouster_slam/config/: lio_sam_ouster.yaml
src/ouster_slam/launch/: ouster_lio_sam.launch.py  ouster_pipeline_slam.launch.py
