<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouster_slam</name>
  <version>0.0.1</version>
  <description>Launch files to run ICP odometry + RTAB-Map on Ouster pipelines</description>
  <maintainer email="ingrid@example.com">Ingrid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Exécutables RTAB-Map (Humble) -->
  <exec_depend>rtabmap_slam</exec_depend>   <!-- contient l'exécutable 'rtabmap' -->
  <exec_depend>rtabmap_odom</exec_depend>   <!-- contient 'icp_odometry', 'rgbd_odometry', ... -->
  <exec_depend>rtabmap_viz</exec_depend>    <!-- optionnel: 'rtabmapviz' -->

  <!-- Autres deps utilisées par tes launch -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

